see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

1-Sep-2010 Ian MacLennan
 + Added JUser::save test

30-Aug-2010 Mark Dexter
^ Improve documentation for JUserHelper unit tests (Thanks Niels Braczek!)

29-Aug-2010 Mark Dexter
+ [#20726] Unit tests for JUserHelper
+ [#22021] ACL System Tests

28-Aug-2010 Ian MacLennan
 # Fixed errors in tests and added mocks to deal with some failures properly

26-Aug-2010 Ian MacLennan
 + Added unit test for JFormRuleEmail

20-Aug-2010 Mark Dexter
# Fix control_panel0004Test for category formatting changes

06-Aug-2010 Mark Dexter
^ Added new var to configdef.php to allow doInstall to set caching to different values

22-Jul-2010 Mark Dexter
# Fix control_panel0004Test and add new acl003Test (Matt Thomas)

16-Jul-2010 Mark Dexter
# Fix controlpanel0002 for button change
# Eliminate second doInstall in TestSuite (no longer needed)

14-Jul-2010 Mark Dexter
# [#21236] PHP System Tests for Tracker Item 20836 Capitalization of "toolbar-popup-Popup"
# [#21312] PHP System Test to check error messages associated with actions performed when nothing is selected
# Update TestSuite for new test
# Add language0001Test from [#21312]

13-Jul-2010 Mark Dexter
# Fix SeleniumJoomlaTestCase to report PHP notices
# System test for [#21083] Category List menu link to unpublished category gives error

12-Jul-2010 Mark Dexter
# Fix failing system test for sample data changes
# Update controlpanel0004Test for [#21196] Save order disk not disabled when not in ordering sort

11-Jul-2010 Mark Dexter
# Add group0002 test to suite
# Clean up system tests for sample data changes

05-Jul-2010 Mark Dexter